# Highly_modular_autonomous_drone

./: README.md  navigation.py  point.txt  start.sh
1.mid360-drone/: README.md
1.mid360-drone/lidar_to_mavros/: CMakeLists.txt  package.xml
1.mid360-drone/lidar_to_mavros/launch/: lidar_to_mavros.launch
1.mid360-drone/lidar_to_mavros/src/: lidar_to_mavros.cpp
2.3D_to_2D/: README.md  point_to_scan.launch
3.track_nav/: README.md
3.track_nav/cartographer/launch/: livox.launch
3.track_nav/cartographer/lua/: livox.lua
3.track_nav/navigation/move_base/config/: nav.rviz
3.track_nav/navigation/move_base/launch/: nav_3dto2d.launch
3.track_nav/navigation/move_base/yaml/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Modular_fuctions/opecv_RGB_舵机控制铝合金铁爪/: README.md  opencv_nav_micro.py
Modular_fuctions/rknn-yolov8-master/: CMakeLists.txt  README.md  package.xml
Modular_fuctions/rknn-yolov8-master/images/: README.md
Modular_fuctions/rknn-yolov8-master/launch/: yolov8_camera.launch  yolov8_ros.launch
Modular_fuctions/rknn-yolov8-master/librknn_api/aarch64/: README.md
Modular_fuctions/rknn-yolov8-master/scripts/: README.md  download_test_assets.sh  fetch_rknn_runtime.sh  setup_board.sh  smoke_test.sh
Modular_fuctions/rknn-yolov8-master/src/: yolov8_img.cpp  yolov8_ros_node.cpp  yolov8_ros_node.cpp.bak  yolov8_video.cpp
Modular_fuctions/rknn-yolov8-master/src/process/: postprocess.cpp  postprocess.h  preprocess.cpp
Modular_fuctions/rknn-yolov8-master/src/task/: yolov8.cpp  yolov8.h
Modular_fuctions/rknn-yolov8-master/videos/: README.md
Modular_fuctions/rknn-yolov8-master/weights/: README.md
drone/: README.md  navigation.py  start.sh
drone/1.mid360-drone/: README.md
drone/1.mid360-drone/lidar_to_mavros/launch/: lidar_to_mavros.launch
drone/1.mid360-drone/lidar_to_mavros/src/: lidar_to_mavros.cpp
drone/2.3D_to_2D/: README.md
drone/3.track_nav/: README.md  livox.launch  nav_3dto2d.launch
