<?xml version="1.0"?>
<package format="2">
  <name>lidar_to_mavros</name>
  <version>1.0.0</version>
  <description>
    Bridge FAST-LIO2 odometry to PX4 EKF2 vision_pose input.
    Subscribes /Odometry from FAST-LIO2 and publishes /mavros/vision_pose/pose.
  </description>

  <maintainer email="drone@example.com">drone-dev</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/your-org/Highly_modular_autonomous_drone</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export/>
</package>
