<?xml version="1.0"?>
<package format="2">
    <name>rknn_yolov8_ros</name>
    <version>0.1.0</version>
    <description>YOLOv8 object detection ROS node for Rockchip RK3588 with RKNN NPU acceleration</description>
    <maintainer email="user@example.com">rknn-yolov8</maintainer>
    <license>MulanPSL-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>vision_msgs</depend>
    <depend>image_transport</depend>

    <export/>
</package>
